<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:fitsSystemWindows="true"
    tools:context=".activity_manager.CreditsActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_description"
                android:layout_width="305dp"
                android:layout_height="133dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_image">

                <RelativeLayout
                    android:id="@+id/relative_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/credits"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_github"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                android:onClick="openGitHubAccount"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_description">

                <RelativeLayout
                    android:id="@+id/relative_layout_github"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="openGitHubAccount">

                    <TextView
                        android:id="@+id/text_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:onClick="openGitHubAccount"
                        android:text="@string/GitHub"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:onClick="openGitHubAccount"
                        app:srcCompat="@drawable/github_icon_light" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu_icon" />

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
                app:srcCompat="@drawable/avatar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_website"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                android:onClick="openPersonalWebSite"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_github">

                <RelativeLayout
                    android:id="@+id/relative_layout_website"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="openPersonalWebSite">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="59dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:onClick="openGitHubAccount"
                        app:srcCompat="@drawable/web_icon" />

                    <TextView
                        android:id="@+id/text_website"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="openPersonalWebSite"
                        android:text="@string/WebSite"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>