<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:fitsSystemWindows="true"
    tools:context=".activity_manager.TorCheckActivity"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/baloo"
                android:text="Tor"
                android:textColor="#1c1c1c"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_home" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/baloo"
                android:text="$ whois app"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
                app:srcCompat="@drawable/onion" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_description"
                android:layout_width="305dp"
                android:layout_height="133dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:labelFor="@id/imageView3"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">

                <RelativeLayout
                    android:id="@+id/relative_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/proxy_check"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ip_section"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_description">

                <RelativeLayout
                    android:id="@+id/relative_layout_get_ip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_get_tor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/no_data"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/get_ip_button"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="55dp"
                android:onClick="checkTor"
                app:cardBackgroundColor="#1c1c1c"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ip_section">

                <RelativeLayout
                    android:id="@+id/relative_layout_get_ip_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="checkTor">

                    <TextView
                        android:id="@+id/text_get_ip_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:onClick="checkTor"
                        android:text="@string/Check_Tor"
                        android:textColor="#FFE600"
                        android:textSize="24sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/shield5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/shield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_ip_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>